Unsuccessful preview jobs still resolve the MIME type; make the model announce the DecorationRole change.

REVIEW:119551
Reviewed-by: David Faure
BUG:337815